--- a/app/src/main/res/layout/drop_down_menu_content.xml
+++ b/app/src/main/res/layout/drop_down_menu_content.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="筛选条件"
+        android:text="底部内容区域"
         android:textColor="@color/black"
         android:textSize="@dimen/sp_18" />
 
