Refactor 新增具备异常兜底能力的Coroutine,代码重构

--- a/app/src/main/res/layout/activity_api_call.xml
+++ b/app/src/main/res/layout/activity_api_call.xml
@@ -20,6 +20,14 @@
         android:text="apiCall方式请求" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_launchSafety"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
+        android:text="使用官方的LifecycleScope调launchSafety请求" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_lifeScope"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
