--- a/app/src/main/res/layout/activity_view_binding.xml
+++ b/app/src/main/res/layout/activity_view_binding.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity.ViewBindingActivity">
 
     <include
-        android:id="@+id/layout_toolbar"
+        android:id="@+id/included_toolbar"
         layout="@layout/toolbar" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
