--- a/app/src/main/res/layout/activity_moshi.xml
+++ b/app/src/main/res/layout/activity_moshi.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.activity.MoshiActivity">
 
     <include
-        android:id="@+id/toolbar"
+        android:id="@+id/included_toolbar"
         layout="@layout/toolbar" />
 
     <com.google.android.material.button.MaterialButton
