--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity.DialogActivity">
 
     <include
-        android:id="@+id/layout_toolbar"
+        android:id="@+id/included_toolbar"
         layout="@layout/toolbar" />
 
 
