--- a/app/src/main/res/layout/activity_flow.xml
+++ b/app/src/main/res/layout/activity_flow.xml
@@ -12,10 +12,34 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_start"
+        android:id="@+id/btn_collect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_16"
         android:layout_marginEnd="@dimen/dp_16"
         android:text="@string/collect" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_launchin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_16"
+        android:layout_marginEnd="@dimen/dp_16"
+        android:text="launchin" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_first"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_16"
+        android:layout_marginEnd="@dimen/dp_16"
+        android:text="first" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_last"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_16"
+        android:layout_marginEnd="@dimen/dp_16"
+        android:text="last" />
 </androidx.appcompat.widget.LinearLayoutCompat>
