feat 新增sharedflow和stateflow使用示例

--- a/app/src/main/res/layout/activity_flow.xml
+++ b/app/src/main/res/layout/activity_flow.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,44 +11,19 @@
         android:id="@+id/included_toolbar"
         layout="@layout/toolbar" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_collect"
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_16"
-        android:layout_marginEnd="@dimen/dp_16"
-        android:text="@string/collect" />
+        android:background="@color/white"
+        app:menu="@menu/menu_flow" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_launchin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_16"
-        android:layout_marginEnd="@dimen/dp_16"
-        android:text="launchin" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_first"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_16"
-        android:layout_marginEnd="@dimen/dp_16"
-        android:text="first" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_last"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_16"
-        android:layout_marginEnd="@dimen/dp_16"
-        android:text="last" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_api_request"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_16"
-        android:layout_marginEnd="@dimen/dp_16"
-        android:text="网络请求" />
 </androidx.appcompat.widget.LinearLayoutCompat>
