fixed 修复 BubbleDialog中属性动画内存泄漏的问题，loadingDialog下沉

--- a/app/src/main/res/layout/fragment_shared_flow.xml
+++ b/app/src/main/res/layout/fragment_shared_flow.xml
@@ -41,4 +41,13 @@
         android:text="StateFlow新订阅" />
 
 
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/et_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_16"
+        android:layout_marginEnd="@dimen/dp_16"
+        android:hint="搜索" />
+
+
 </androidx.appcompat.widget.LinearLayoutCompat>
