feat 删除无用代码，新增持续定位示例，轮询方案变更

--- a/gao-de-map/src/main/res/layout/activity_gao_de.xml
+++ b/gao-de-map/src/main/res/layout/activity_gao_de.xml
@@ -14,12 +14,25 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_location"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_10"
         android:text="@string/start_location" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_continue_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_10"
+        android:text="持续定位" />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_allow_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_10"
+        android:text="允许完全后台行为" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_location_result"
