--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,10 +31,10 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dp_196"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/dp_72"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:layout_marginTop="@dimen/dp_16"
+            app:srcCompat="@drawable/ic_splash" />
 
 
         <com.google.android.material.textfield.TextInputLayout
