--- a/gao-de-map/src/main/res/layout/activity_gao_de.xml
+++ b/gao-de-map/src/main/res/layout/activity_gao_de.xml
@@ -28,11 +28,18 @@
 
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_stop_continue_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_10"
+        android:text="停止持续定位" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_allow_back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_10"
-        android:text="允许完全后台行为" />
+        android:text="忽略电池优化" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_location_result"
