--- a/app/src/main/res/layout/fragment_view_pager_with.xml
+++ b/app/src/main/res/layout/fragment_view_pager_with.xml
@@ -12,6 +12,7 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         app:tabIndicator="@drawable/tab_in"
         app:tabIndicatorFullWidth="false"
         app:tabIndicatorHeight="@dimen/dp_4"
