--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Base application theme. -->
     <style name="Theme.XeonYuTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
-        <!-- Primary brand color. -->
+        <!-- 主色调 状态默认颜色，按钮背景以及文本的选中颜色都跟这个有关 -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
@@ -45,7 +45,8 @@
 
     <!--androidx.core:core-splashscreen Android 12的启动屏适配 兼容低版本-->
     <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
-        <item name="android:windowFullscreen">true</item>
+        <!--        <item name="windowNoTitle">true</item>-->
+        <!--        <item name="android:windowFullscreen">true</item>-->
         <!--设备背景颜色-->
         <item name="windowSplashScreenBackground">@color/white</item>
         <!--设置动画或图片  动画在Android12 以下不生效 很难受...-->
@@ -68,5 +69,6 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
+
 
 </resources>
