--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -47,6 +47,7 @@
     <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
         <!--        <item name="windowNoTitle">true</item>-->
         <!--        <item name="android:windowFullscreen">true</item>-->
+<!--        <item name="android:windowIsTranslucent">true</item>-->
         <!--设备背景颜色-->
         <item name="windowSplashScreenBackground">@color/white</item>
         <!--设置动画或图片  动画在Android12 以下不生效 很难受...-->
