--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -60,6 +60,7 @@
 
         <!--动画执行时间-->
         <!--        <item name="windowSplashScreenAnimationDuration">1000</item>-->
+        <!--设置闪屏也后启动页面的主题 说白了 就是app本来的主题-->
         <item name="postSplashScreenTheme">@style/Theme.XeonYuTheme</item>
 
     </style>
