--- a/app/src/main/res/xml/config.xml
+++ b/app/src/main/res/xml/config.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="com.example.hello"
-    version="1.0.0"
-    xmlns="http://www.w3.org/ns/widgets">
+<widget
+    id="com.example.hello"
+    version="1.0.0">
     <name>HelloWorld</name>
     <description>Sample Apache Cordova App</description>
     <author
