--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,9 +21,13 @@
     </style>
 
 
-    <style name="Theme.AppTheme.AppBarOverlay" parent="Theme.XeonYuTheme" />
+    <style name="Theme.AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:color">@color/white</item>
+    </style>
 
-    <style name="Theme.AppTheme.PopupOverlay" parent="Theme.XeonYuTheme" />
+    <style name="Theme.AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:color">@color/white</item>
+    </style>
 
     <style name="Theme.AppTheme.TabLayout" parent="Theme.XeonYuTheme">
 
