--- a/app/src/main/res/layout/dialog_scroll_layout.xml
+++ b/app/src/main/res/layout/dialog_scroll_layout.xml
@@ -97,5 +97,11 @@
         android:layout_height="wrap_content"
         android:text="底部弹窗" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_dialog_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="dialogFragment" />
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
