--- a/dialog/src/main/res/drawable/shape_bg_dialog_custom.xml
+++ b/dialog/src/main/res/drawable/shape_bg_dialog_custom.xml
@@ -10,4 +10,10 @@
         android:endColor="@color/light_blue_50"
         android:startColor="@color/white"
         android:type="linear" />
+
+    <padding
+        android:bottom="0dp"
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp" />
 </shape>
