--- a/base/src/main/res/xml/file_provider_path.xml
+++ b/base/src/main/res/xml/file_provider_path.xml
@@ -3,22 +3,29 @@
     <paths>
         <root-path
             name="root"
-            path="" />
+            path="." />
+        <!-- 内部存储路径 -->
         <files-path
-            name="files"
-            path="" />
+            name="internal_files"
+            path="." />
         <cache-path
-            name="cache"
-            path="" />
+            name="internal_cache"
+            path="." />
+
+        <!-- 外部存储路径 -->
         <external-path
-            name="external"
-            path="" />
-        <external-files-path
             name="external_files"
-            path="" />
+            path="." />
+        <external-files-path
+            name="external_files_path"
+            path="." />
         <external-cache-path
-            name="external-cache"
-            path="" />
+            name="external_cache"
+            path="." />
+        <external-media-path
+            name="external_media"
+            path="." />
+
 
     </paths>
 </resources>
